@@ -1,4 +1,4 @@
-2014-09-17  Charlie Zender  <zender@uci.edu>
+2014-09-18  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.4.6 release procedure:
  	Changes since nco-4_4_5: ncks -V, ncap2 -s -S, DAP cnf
@@ -6,7 +6,11 @@
 	cd ~/nco;cvs commit -m "Preparing nco-4.4.6 release"
 	cvs tag -c nco-4_4_6;cvs tag -c nco-4_4_6-1
 
-	* Begin generalizing ncra.c so single record dimensions can occupy any position
+	* Note locations which assume record dimension is in first position
+
+2014-09-17  Charlie Zender  <zender@uci.edu>
+
+	* Start to generalize ncra.c so single record dimensions can occupy any position
 
 2014-09-16  Charlie Zender  <zender@uci.edu>
 
